--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <h1>WEB DEVELOPER</h1>
                 <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Cupiditate officiis reprehenderit
-                   quos rem eligendi porro ipsum in laudantium molestias quo fugit 
-                   temporibus sequi ipsam aliquid reiciendis error, saepe repellat ex.</p>
+                    quos rem eligendi porro ipsum in laudantium molestias quo fugit
+                    temporibus sequi ipsam aliquid reiciendis error, saepe repellat ex.</p>
                 <br>
                 <div class="socials">
                     <a href="#"><i class="ri-instagram-line"></i></a>
@@ -43,9 +43,114 @@
         </div>
     </div>
     <div class="page2">
+        <div class="skills_container">
+            <h1>MY SKILLS</h1>
+        </div>
+        <div class="skills_content">
+            <div class="frontend">
+                <h2>Front end:</h2>
+                <hr>
+                <div class="frontend_content">
+                    <div class="content">
+                        <img src="assets/img/html.jpg" alt="">
+                        <br>
+                        <h3>HTML</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed labore,
+                            nulla vitae necessitatibus ullam aliquam error, cupiditate natus atque,
+                            velit ducimus officia praesentium eos autem vero et. Fuga, voluptatem iusto.</p>
+                    </div>
+                    <div class="content">
+                        <img src="assets/img/css.jpg" alt="">
+                        <br>
+                        <h3>CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed labore,
+                            nulla vitae necessitatibus ullam aliquam error, cupiditate natus atque,
+                            velit ducimus officia praesentium eos autem vero et. Fuga, voluptatem iusto.</p>
+                    </div>
+                    <div class="content">
+                        <img src="assets/img/js.jpg" alt="">
+                        <br>
+                        <h3>Java Script</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed labore,
+                            nulla vitae necessitatibus ullam aliquam error, cupiditate natus atque,
+                            velit ducimus officia praesentium eos autem vero et. Fuga, voluptatem iusto.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="backend">
+                <h2>Back end:</h2>
+                <hr>
+                <div class="backend_content">
+                    <div class="content">
+                        <img src="assets/img/nodejs.png" alt="">
+                        <br>
+                        <h3>Node js</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed labore,
+                            nulla vitae necessitatibus ullam aliquam error, cupiditate natus atque,
+                            velit ducimus officia praesentium eos autem vero et. Fuga, voluptatem iusto.</p>
+                    </div>
+
+                    <div class="content">
+                        <img src="assets/img/PYTHON.jfif" alt="">
+                        <br>
+                        <h3>python</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed labore,
+                            nulla vitae necessitatibus ullam aliquam error, cupiditate natus atque,
+                            velit ducimus officia praesentium eos autem vero et. Fuga, voluptatem iusto.</p>
+                    </div>
+                    <div class="content">
+                        <img src="assets/img/MONGODB.png" alt="">
+                        <br>
+                        <h3>Mongo Db</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed labore,
+                            nulla vitae necessitatibus ullam aliquam error, cupiditate natus atque,
+                            velit ducimus officia praesentium eos autem vero et. Fuga, voluptatem iusto.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="page3">
+        <div class="portfolio_container">
+            <!--            portfolio-->
+            <h1>MY PROJECTS</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas, id ipsam tempora voluptate in porro
+                adipisci expedita dolore eos consectetur dicta itaque sed obcaecati dignissimos.</p>
+        </div>
+        <div class="porfolio_content">
+            <div class="work">
+                <img src="assets/img/project1.png" alt="">
+                <img src="assets/img/project2.jpg" alt="">
+                <img src="assets/img/project3.jpg" alt="">
+                <img src="assets/img/project4.jpg" alt="">
+            </div>
+            
 
     </div>
-    
+    <div class="page4">
+        <div class="contact">
+            <div class="contact_container">
+                <div class="contact_left">
+                    <h1>CONTACT ME</h1>
+                    <p><i class="ri-mail-fill"></i>contact@portfolio.com</p>
+                    <p><i class="ri-phone-fill"></i>0123456789</p>
+                </div>
+                <div class="contact_right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button class="btn">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright@2023Portfolio.All rights reserved</p>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
