--- a/index.html
+++ b/index.html
@@ -118,14 +118,15 @@
                 adipisci expedita dolore eos consectetur dicta itaque sed obcaecati dignissimos.</p>
         </div>
         <div class="porfolio_content">
-            <div class="work">
+            <div class="work1">
                 <img src="assets/img/project1.png" alt="">
                 <img src="assets/img/project2.jpg" alt="">
+            </div>
+            <div class="work2">
                 <img src="assets/img/project3.jpg" alt="">
                 <img src="assets/img/project4.jpg" alt="">
             </div>
-            
-
+        </div>
     </div>
     <div class="page4">
         <div class="contact">
